# opencv-template

./: .gitignore  CMakeLists.txt
src/: main.cpp
